<resources>

    <string name="app_name">SignLingo</string>
    <string name="exercise_title">Hand Sign of Letter %1$s</string>
    <string name="exercise_subtitle">Form the hand sign and capture it!</string>
    <string name="submit_and_check">SUBMIT AND CHECK</string>
    <string name="not_quite_sure">Not quite sure?</string>
    <string name="retry">Click on your image to retry!</string>
    <string name="capture">Capture Hand Sign with Camera</string>
    <string name="continue_learning">CONTINUE LEARNING</string>
    <string name="true_title">That\'s True!</string>
    <string name="true_subtitle">Congratulations! You mastered the hand sign of this letter! Keep going!</string>
    <string name="wrong_title">Oopps, Wrong!</string>
    <string name="wrong_subtitle">Maybe you need to learn more and more for this letter! Try Again!</string>
    <string name="try_again">TRY AGAIN</string>
    <string name="z">Z</string>
    <string name="y">Y</string>
    <string name="x">X</string>
    <string name="w">W</string>
    <string name="v">V</string>
    <string name="u">U</string>
    <string name="t">T</string>
    <string name="s">S</string>
    <string name="r">R</string>
    <string name="q">Q</string>
    <string name="p">P</string>
    <string name="o">O</string>
    <string name="n">N</string>
    <string name="m">M</string>
    <string name="l">L</string>
    <string name="k">K</string>
    <string name="j">J</string>
    <string name="i">I</string>
    <string name="h">H</string>
    <string name="g">G</string>
    <string name="f">F</string>
    <string name="e">E</string>
    <string name="d">D</string>
    <string name="c">C</string>
    <string name="b">B</string>
    <string name="a">A</string>
    <string name="click_to_see_the_sign_language_illustration">Click to see the sign language illustration</string>
    <string name="sign_languages">Sign Languages</string>
    <string name="handsign_desc">This is the description of how to form the hand sign of letter E with your hand. It can consist of some paragraphs and must be detailed so the user can understand how to form that hand sign correctly.</string>
    <string name="how_to_do_that">How to Do That?</string>
    <string name="try_this_hand_sign">TRY THIS HAND SIGN</string>
    <string name="image_result">Image Result</string>
    <string name="quiz_title">Quick Quiz</string>
    <string name="quiz_subtitle">Guess the letter of this hand sign!</string>
    <string name="image_quiz">Quiz Image</string>
    <string name="error_empty">This field is required!</string>
    <string name="hint_quiz">What letter is it?</string>
    <string name="quickquiz_desc">Guess the letter of the given handsign picture</string>
    <string name="quickquiz_title">Guess The Letter</string>
    <string name="try_now">TRY NOW</string>
    <string name="quiz_desc">Do a quick quiz to test your knowledge</string>
    <string name="quiz">Quick Quiz</string>
    <string name="cat">Cat Image</string>

    <string-array name="data_char">
        <item>A</item>
        <item>B</item>
        <item>C</item>
        <item>D</item>
        <item>E</item>
        <item>F</item>
        <item>G</item>
        <item>H</item>
        <item>I</item>
        <item>J</item>
        <item>K</item>
        <item>L</item>
        <item>M</item>
        <item>N</item>
        <item>O</item>
        <item>P</item>
        <item>Q</item>
        <item>R</item>
        <item>S</item>
        <item>T</item>
        <item>U</item>
        <item>V</item>
        <item>W</item>
        <item>X</item>
        <item>Y</item>
        <item>Z</item>
    </string-array>

    <string-array name="data_description">
        <item>Make a fist with your thumb pointing up to form an "A." Hold your hand in front of you with your palm facing forward. Close your fingers in a fist, but keep your thumb pressed against the side of your hand and pointing upwards.</item>
        <item>Hold your fingers together with your thumb across your palm for "B." Extend your fingers so they are straight. Bring them in close to each other so they are touching on the sides. Then, fold your thumb across the front of your palm and hold it there.</item>
        <item>Curl your whole hand into the shape of a "C". Turn your right hand so that your palm is facing towards the left. Then, curl your fingers and thumb to form a half circle or backwards "C." Hold your hand still.</item>
        <item>Touch your fingertips to your thumb and point to make a "D". Touch the tip of your thumb to every finger except your index finger. Then, point your index finger straight up. Hold your hand still with your palm facing forward.</item>
        <item>Form the letter "B" and curl your fingertips down to make an "E." Bend all four fingers down to meet your thumb. Press the tips of your fingers against the side of your thumb. Keep your thumb and fingertips close to your palm. Otherwise, it might look like an "O" or "C."</item>
        <item>Press your index finger and thumb together with straight fingers for "F." Keep your other 3 fingers straight.</item>
        <item>Point your index finger and turn your hand to the side to make a "G." Gather your fingers in towards your palm to make a fist. Then, extend your index finger and rest your thumb against your middle finger. Keep your thumb about 0.5 in (1.3 cm) from your palm so that it is parallel to your index finger. Angle your hand so that your palm is facing you and your index finger is pointing to your left.</item>
        <item>Stick out your middle and index fingers to form an "H." Keep your hand in the same position as it was for the letter "G," but extend your middle finger as well. Hold your middle finger so it’s right next to your index finger. Angle your hand so that your palm is facing you and your index and middle fingers are pointing to your left.</item>
        <item>Point your pinkie straight up to make an "I." Form a fist and poke your pinkie finger straight up.</item>
        <item>Use your pinkie to draw the shape of a "J". With your hand still in the position for the letter "I," bring your finger down and then swoop it upwards in the shape of a letter "J." Do this multiple times if you want to create multiple Js, or just once for one letter J. Keep your palm facing away from you as you do this.</item>
        <item>Point the index and middle fingers with a thumb between them for "K." Press your ring finger and pinkie finger against your palm. Hold your index and middle finger so they are straight up but spread apart in the shape of a V. Then, press your thumb against your palm so that the tip of your thumb is between your index and middle finger near where they meet your hand.</item>
        <item>Form an L-shape with your thumb and index finger to make an "L." Press your middle, ring, and pinkie fingers against your palm as you form an L-shape with your index finger and thumb.</item>
        <item>Hold an invisible ball and poke your thumb through for "M." Curl your fingers down towards your palm with your thumb between your index and middle finger. Hold your fingers like you’re wrapping them around a ball. Then, poke your thumb between your ring and pinky finger.</item>
        <item>Poke your thumb between your middle and ring finger for "N." Curl your fingers as if they’re holding a ball. Then, push the tip of your thumb between your middle and ring fingers.</item>
        <item>Make an "O" with your fingers and thumb. Press the tips of your fingers and thumb together.</item>
        <item>Press your thumb against your middle finger with index pointed for "P." Press your ring finger and pinkie finger against your palm. Then, extend your index finger as if you are pointing at something. Extend your middle finger so it is pointing down and touch it with your thumb.</item>
        <item>Make the sign for a "G" and then point down for a "Q." Press your middle, ring, and pinkie fingers against your palm and point with your index finger. Then, rest your thumb on top of your middle finger so that it is about 0.5 in (1.3 cm) from your index finger. Then, point down with your hand in this position.</item>
        <item>Cross your index finger over your middle finger for an "R." Press your ring finger, pinkie, and thumb against your palm. Then, wrap your middle finger around the back of your index finger. Hold your hand still with your palm facing forward.</item>
        <item>Make a fist and put your thumb on top of your fingers for an "S." This is often confused with "A" so pay careful attention to the thumb position. Press your fingers against your palm and wrap your thumb over them.</item>
        <item>Form a fist with your thumb between the middle and index finger for "T." Press your fingers against your palm. Then, push your thumb up between your index and middle finger.</item>
        <item>Point your middle and index fingers upwards together to make "U." Press your thumb, ring finger, and pinkie finger against your palm. Then, point your middle and index finger straight up and hold them against each other.</item>
        <item>Make a "U" and separate your fingers for a "V." With your hand in the "U" position, spread your fingers apart. Make sure to keep your ring finger, pinkie, and thumb pressed against your palm.</item>
        <item>Hold up 3 fingers and spread them apart to form "W." Press your pinkie finger to your palm using your thumb. Then, hold up your index, middle, and ring fingers and spread them apart so that they look like the letter "W."</item>
        <item>Make a fist, then raise and crook your index finger to make "X." Press your thumb against your palm and then wrap your middle, ring, and pinkie fingers over it. Curl your index finger.</item>
        <item>Stick out your pinkie and thumb for a "Y." Press your other fingers against your palm.</item>
        <item>Write the letter "Z" in the air with your index finger. Form the letter "D", with your index finger out, and write a letter "Z" in the air.</item>
    </string-array>
</resources>