<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.view.MainActivity">

    <TextView
        android:id="@+id/tv_signlanguages"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/sign_languages"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_seeall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginRight="16dp"
        android:text="See All"
        android:textColor="@color/blue"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_signlanguages_desc"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/click_to_see_the_sign_language_illustration"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signlanguages" />

    <LinearLayout
        android:id="@+id/row1"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_signlanguages_desc">

        <Button
            android:id="@+id/btn_a"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/a" />

        <Button
            android:id="@+id/btn_b"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/b" />

        <Button
            android:id="@+id/btn_c"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/c" />

        <Button
            android:id="@+id/btn_d"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/d" />

        <Button
            android:id="@+id/btn_e"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/e" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row2"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row1">

        <Button
            android:id="@+id/btn_f"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/f" />

        <Button
            android:id="@+id/btn_g"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/g" />

        <Button
            android:id="@+id/btn_h"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/h" />

        <Button
            android:id="@+id/btn_i"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/i" />

        <Button
            android:id="@+id/btn_j"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/j" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row3"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row2">

        <Button
            android:id="@+id/btn_k"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/k" />

        <Button
            android:id="@+id/btn_l"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/l" />

        <Button
            android:id="@+id/btn_m"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/m" />

        <Button
            android:id="@+id/btn_n"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/n" />

        <Button
            android:id="@+id/btn_o"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/o" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row4"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row3">

        <Button
            android:id="@+id/btn_p"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/p" />

        <Button
            android:id="@+id/btn_q"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/q" />

        <Button
            android:id="@+id/btn_r"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/r" />

        <Button
            android:id="@+id/btn_s"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/s" />

        <Button
            android:id="@+id/btn_t"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/t" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row5"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row4">

        <Button
            android:id="@+id/btn_u"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/u" />

        <Button
            android:id="@+id/btn_v"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/v" />

        <Button
            android:id="@+id/btn_w"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/w" />

        <Button
            android:id="@+id/btn_x"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/x" />

        <Button
            android:id="@+id/btn_y"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/y" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/row6"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginHorizontal="16dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:visibility="gone"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row5">

        <Button
            android:id="@+id/btn_z"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_marginHorizontal="8dp"
            android:backgroundTint="@color/blue"
            android:text="@string/z" />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_quickquiz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/quick_quiz"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/row6" />


</androidx.constraintlayout.widget.ConstraintLayout>