<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.view.QuizActivity">

    <TextView
        android:id="@+id/tv_quiz_title"
        style="@style/SectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:text="@string/quiz_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/tv_quiz_subtitle"
        style="@style/SectionSubtitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="0dp"
        android:layout_marginEnd="24dp"
        android:text="@string/quiz_subtitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_title" />

    <ImageView
        android:id="@+id/img_quiz"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:contentDescription="@string/image_quiz"
        app:layout_constraintDimensionRatio="1:1"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="60dp"
        android:layout_marginRight="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_quiz_subtitle"
        android:src="@drawable/a" />

    <com.signlingo.customview.QuizEditText
        android:id="@+id/edt_quiz"
        style="@style/SectionTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="24dp"
        android:paddingStart="18dp"
        android:paddingEnd="18dp"
        android:hint="@string/hint_quiz"
        android:inputType="text"
        android:textAllCaps="true"
        android:minHeight="48dp"
        android:drawableStart="@drawable/ic_answer"
        android:drawablePadding="8dp"
        android:gravity="center_vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/img_quiz" />

    <com.signlingo.customview.RoundedButton
        android:id="@+id/btn_submit"
        style="@style/ButtonText"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:layout_marginTop="20dp"
        android:backgroundTint="@color/green"
        android:paddingLeft="20dp"
        android:paddingRight="20dp"
        android:text="@string/submit_and_check"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edt_quiz" />

</androidx.constraintlayout.widget.ConstraintLayout>