<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".main.view.TrueActivity">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:layout_width="180dp"
            android:layout_height="180dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            app:srcCompat="@drawable/img_true" />

        <TextView
            style="@style/SectionTitle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:text="@string/true_title" />

        <TextView
            style="@style/Description"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:minLines="2"
            android:textAlignment="center"
            android:layout_marginTop="4dp"
            android:text="@string/true_subtitle" />

        <com.signlingo.customview.RoundedButton
            android:id="@+id/btn_continue"
            style="@style/ButtonText"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_marginTop="20dp"
            android:gravity="center"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:text="@string/continue_learning" />

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>